BUG 4103 测试提交 - 9X 很多很多名字 - 撤销webapp目录外的更改

--- a/weapp/apps/customerized_apps/shengjing/templates/webapp/friend_page.html
+++ b/weapp/apps/customerized_apps/shengjing/templates/webapp/friend_page.html
@@ -81,7 +81,7 @@
     	<div class="xui-section pr"stle="overflow:hidden;">
     		<div class="xui-section-item xui-headInfo clearfix pr">
     			<img src="{% if binding_info.member.user_icon %}{{ binding_info.member.user_icon }}{% else %}/static/img/user-1.jpg{% endif %}" alt="" class="xui-photo">
-    			<div class="xui-stuName pa">{{binding_info.member.username_for_html}}</div>
+    			<div class="xui-stuName pa">{{binding_info.member.username}}</div>
     		</div>
     		<div class="pa xui-dotsBorder"></div>
     		<div style="padding:0 20px 15px 20px;" class="xa-userInfo">
