--- a/weapp/apps/customerized_apps/shengjing/templates/webapp/user_center.html
+++ b/weapp/apps/customerized_apps/shengjing/templates/webapp/user_center.html
@@ -119,7 +119,7 @@
                 </div>
             </dt>
             <dd class="tc">
-                <h2 class="mt5 tc" style="font-size:1.4em;">{{ member.username_for_html }}</h2>
+                <h2 class="mt5 tc" style="font-size:1.4em;">{{ member.username }}</h2>
                 <div class="xui-inner-roleBox mt5">
                     <span class="xui-inner-roleLabel">
                     {{ member_info.status_name }}
