--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -320,11 +320,26 @@ body {
 }
 
 
-
-
-
-
-
+/*appkit组件样式*/
+.componentList_component_qa,.componentList_component_selection,.componentList_component_textlist,.componentList_component_shortcuts{
+	background: url(/static_v2/img/termite2/appKitSeprites.png) no-repeat;
+	-webkit-background-size: 137px 42px;
+	background-size: 137px 42px;
+}
+.xui-component .componentList_component_qa{
+	background-position:3px 3px;
+}
+.xui-component .componentList_component_selection{
+	background-position:-44px 3px;
+}
+.xui-component .componentList_component_textlist{
+	background-position: -89px 3px;
+  	width: 50px;
+}
+.xui-component .componentList_component_shortcuts{
+	background-position: -89px 3px;
+  	width: 50px;
+}
 
 /*
  * phone区域样式
