修复apps3上丢失的修改

--- a/weapp/apps/customerized_apps/event/templates/webapp/is_already_participanted.html
+++ b/weapp/apps/customerized_apps/event/templates/webapp/is_already_participanted.html
@@ -12,6 +12,9 @@
         line-height: 35px;
         color: #cf0404;
     }
+    .wui-i-prize {
+        float: left;
+    }
     </style>
 
 {% endblock %}
