--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -96,6 +96,8 @@
             <div class="wui-submitButton xui-hide xa-toUserCenter" style="display: block; transform-origin: 0px 0px 0px; opacity: 1; transform: scale(1, 1);" >
                 <a class="xui-btn xui-btn-primary xa-submitTermite" style="" href="javascript:void(0);" data-role="button">个人中心</a>
             </div>
+        {% else %}
+            <div style="min-height: 25px;"></div>
         {% endif %}
     </div>
 {% endblock %}
