--- a/weapp/termite/static/termite_js/app/component/appkit/surveydescription/surveydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/surveydescription/surveydescription.html
@@ -5,11 +5,11 @@
 <div  
     class="wui-surveyDescription xa-prizeContainer"  
     data-component-cid="{{component.cid}}" 
-    style="min-height:100px; background-color:#FFF;"
+    style="min-height:100px; background-color:#FFF;margin-top: -16px;"
     data-prize='{{component.model.prize|to_json|safe}}'
 >
 	<h1 class="wui-i-title xa-title">{{component.model.title}}</h1>
-	<h2 class="wui-i-subtitle xa-subtitle">{{component.model.subtitle}}</h2>
+	<h3 class="wui-i-subtitle xa-subtitle">{{component.model.subtitle}}</h3>
 	<div class="wui-i-description">
 		{{component.model.description|safe}}
 	</div>
