修改bug 功能问题【店铺装修】预览时没有显示页面名称

--- a/weapp/termite2/templates/termite2/termite_preview.html
+++ b/weapp/termite2/templates/termite2/termite_preview.html
@@ -57,7 +57,7 @@
 window.setWebappPageTitle = function(title) {
     $('.xa-simulatorTitle').text(title);
 }
-W.previewName = "";
+W.previewName = "{{ page_title }}";
 
 $(document).ready(function() {
     W.ISUNLOADALERT = true;
