--- a/weapp/apps/customerized_apps/vote/templates/editor/votes.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/votes.html
@@ -14,13 +14,13 @@
 		<div class="xui-form disT">
 			<div class="xui-col disTc">
 				<div class="xui-i-item">
-					<label class="">活动名称&nbsp;</label>
+					<label class="">活动名称：</label>
 					<input type="text" class="form-control" id="name" name="name" value="" />
 				</div>
 			</div>
 			<div class="xui-col disTc">
 				<div class="xui-i-item ml20">
-					<label>状态&nbsp;</label>
+					<label>状态：</label>
 					<select class="" id="status" name="status">
 						<option value="-1">所有投票</option>
 						<option value="0">未开始</option>
@@ -31,7 +31,7 @@
 			</div>
 			<div class="xui-col disTc">
 				<div class="xui-i-item">
-					<label>活动时间&nbsp;</label>
+					<label>活动时间：</label>
 					<input
 						type="text"
 						class="form-control xui-datePicker"
@@ -112,7 +112,7 @@
 		<thead>
 			<tr>
 				<th>活动名称</th>
-				<th>投票人数</th>
+				<th>参与人数</th>
 				<th>奖项类型</th>
 				<th>开始时间</th>
 				<th>结束时间</th>
