--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -3191,7 +3191,7 @@ input.ui-input-text, textarea.ui-input-text {
 }
 .xui-orderListPage .wui-swiper-slide{
     background: #f0f0f0;
-    overflow-y:auto;
+    overflow-x:hidden;
 }
 .xui-orderListPage .xui-selectedProductList-productInfo{
     position: relative;
