--- a/weapp/market_tools/tools/activity/templates/activity/webapp/my_activities.html
+++ b/weapp/market_tools/tools/activity/templates/activity/webapp/my_activities.html
@@ -5,6 +5,9 @@
 <!-- <link type="text/css" rel="stylesheet" href="/static/css/market_tools_css/common.css"> -->
 <link rel="stylesheet" href="/markettools_static/coupon/css/idangerous.swiper.css">
 <style>
+    .xui-myActivityPage .wui-swiper-tabs a {
+        width: 50%;
+    }
     .wui-swiper-slide{overflow-y: auto;}
     .xui-myActivityPage .wui-tabs a {
         width:33.33%;
@@ -34,18 +37,18 @@
         <div class="wui-swiper-tabs">
             <a href="javascript:void(0)" class="wui-inner-active"><span class="wui-inner-tabTitle mt5 em85 c65">我的活动</span><i></i></a>
             <a href="javascript:void(0)"><span class="wui-inner-tabTitle mt5 em85 c65">我的抽奖</span><i></i></a>
-            <a href="javascript:void(0)"><span class="wui-inner-tabTitle mt5 em85 c65">我的投票</span></a>
+{#            <a href="javascript:void(0)"><span class="wui-inner-tabTitle mt5 em85 c65">我的投票</span></a>#}
         </div>
         <div class="wui-swiper-container" style="margin-top:47px;">
             <div class="wui-swiper-wrapper">
                 <div class="wui-swiper-slide">
-                    {% if activities %}
+                    {% if events_items %}
                     <ul class="xui-listItem">
-                        {% for activity in activities %}
+                        {% for events_item in events_items %}
                         <li data-role="button" data-icon="true" class="xui-listInner pl10 pr15">
                             <a href="{{activity.target_link}}" data-coupon-id="{{coupon.id}}">
                                 <p class="pt15 pb15 disT">
-                                    <span class="disTc pl5 em1">{{ activity.name }}</span>
+                                    <span class="disTc pl5 em1">{{ events_item.name }}</span>
                                     <span class="mr20 em1 disTc vm ">
                                     {% if activity.status == 1 %}
                                     <span class="xui-text-green">已启动</span>
@@ -130,19 +133,19 @@
                     </div>
                     {% endif %}
                 </div>
-                <div class="wui-swiper-slide">
-                    {% if votes %}
-                    <ul class="xui-listItem">
-                        {% for vote in votes %}
-                        <li data-role="button" data-icon="true" class="xui-listInner pl15 pr15">
-                            <a href="{{ vote.url }}" style="display:inline-block;width:85%;" class="pl5">{{ vote.name }}</a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                    {% else %}
-                    您还没有参与投票
-                    {% endif %}
-                </div>
+{#                <div class="wui-swiper-slide">#}
+{#                    {% if votes %}#}
+{#                    <ul class="xui-listItem">#}
+{#                        {% for vote in votes %}#}
+{#                        <li data-role="button" data-icon="true" class="xui-listInner pl15 pr15">#}
+{#                            <a href="{{ vote.url }}" style="display:inline-block;width:85%;" class="pl5">{{ vote.name }}</a>#}
+{#                        </li>#}
+{#                        {% endfor %}#}
+{#                    </ul>#}
+{#                    {% else %}#}
+{#                    您还没有参与投票#}
+{#                    {% endif %}#}
+{#                </div>#}
             </div>
         </div>
             
