--- a/weapp/static_v2/js/view/apps_prize_selector/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector/template.html
@@ -10,12 +10,11 @@
 		type="text" 
 		class="xui-propertyGroup-input xa-optionTarget {{#ifCond prize.type '!==' 'integral'}}xui-hide{{/ifCond}} xa-integral" 
 		name="integral" 
-		data-target="integral" 
+		data-target="integral"
 		placeholder="输入奖励积分值" 
-		data-validate="require-positive-int::输入正整数积分值"
+		data-validate="require-notempty::不能为空,,require-positive-int::输入正整数积分值"
 		{{#if prize.data}}value="{{prize.data}}"{{/if}} />
-	<div class="errorHint"></div>
-
+	<div class="errorHint" style="margin-left: 37%;"></div>
 	<a 
 		href="javascript:void(0);" 
 		class="xui-hide xa-optionTarget ml5 xa-selectCoupon" 
@@ -32,5 +31,6 @@
 
 		<a href="javascript:void(0);" class="xa-selectCoupon ml5">修改</a>
 	</div>
+
 </div>
 </script>
