--- a/weapp/static_v2/js/view/apps_prize_selector_v3/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector_v3/template.html
@@ -11,11 +11,11 @@
 		type="text" 
 		class="xui-propertyGroup-input xa-optionTarget {{#ifCond prize.type '!==' 'integral'}}xui-hide{{/ifCond}} xa-integral" 
 		name="integral" 
-		data-target="integral" 
+		data-target="integral"
 		placeholder="输入奖励积分值" 
-		data-validate="require-int::输入整数积分值" 
+		data-validate="require-notempty::不能为空,,require-nonnegative::输入0或整数积分值"
 		{{#if prize.data}}value="{{prize.data}}"{{/if}} />
-
+	<div class="errorHint" style="margin-left: 37%;"></div>
 	<a 
 		href="javascript:void(0);" 
 		class="xui-hide xa-optionTarget ml5 xa-selectCoupon" 
