订单列表图片容器定高

--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -3265,6 +3265,7 @@ input.ui-input-text, textarea.ui-input-text {
 
 .xui-orderListPage .xui-selectedProductList-productImg{
     width: 60px;
+    height:60px;
     vertical-align: middle;
 }
 .xui-orderListPage .xui-selectedProductList-productImg img{
