--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -147,7 +147,7 @@
         <div class="xui-section-item">
             <a href="./?module=market_tool:activity&model=member_activites&action=get&workspace_id=market_tool:activity&webapp_owner_id={{request.webapp_owner_id}}&project_id=0">
                 <span class="xui-icon-tool mr5 xui-icon-tool-activity" class="em95"></span>
-                我参与的活动<span class="xui-inner-info">报名/抽奖/投票</span>
+                我参与的活动<span class="xui-inner-info">活动/抽奖</span>
             </a>
         </div>
        <div class="xui-section-item">
