--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -103,7 +103,9 @@ body {
 	z-index: 1001;
 }
 
-
+.xui-wepage-globalNavPage .xui-bottomActionBar,.xui-wepage-workbenchPage .xui-bottomActionBar{
+	position: absolute;
+}
 
 
 
