--- a/weapp/static_v2/js/view/apps_prize_selector/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector/template.html
@@ -14,14 +14,16 @@
 		placeholder="输入奖励积分值" 
 		data-validate="require-notempty::不能为空,,require-positive-int::输入正整数积分值"
 		{{#if prize.data}}value="{{prize.data}}"{{/if}} />
-	<div class="errorHint" style="margin-left: 37%;"></div>
-	<a 
-		href="javascript:void(0);" 
-		class="xui-hide xa-optionTarget ml5 xa-selectCoupon" 
-		data-target="coupon" 
-	>
-		请选择优惠券
-	</a>
+	<div class="coupon_div xa-optionTarget xa-selectCoupon" data-target="coupon" style="display:none">
+		<a
+			href="javascript:void(0);"
+			class="xui-hide ml5 xa-selectCoupon"
+		>请选择优惠券	</a>
+		<input style="width:0;background:#F9F9F9;border:0" type="text" data-validate="require-notempty::请选择一张优惠券" />
+		<div class="errorHint" style="margin-left: 58%;width: 100px;"></div>
+	</div>
+
+
 
 	<div class="ml5 xui-inline xa-selectedCoupon xa-optionTarget {{#ifCond prize.type '!==' 'coupon'}}xui-hide{{/ifCond}}">
 		<div class="pr xui-i-selectedBox">
@@ -31,6 +33,7 @@
 
 		<a href="javascript:void(0);" class="xa-selectCoupon ml5">修改</a>
 	</div>
+	<div class="errorHint" style="margin-left: 37%;"></div>
 
 </div>
 </script>
