更新lottery组件样式

--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -75,7 +75,7 @@
 		</div>
         <i class="wui-i-sprite xui-sprite-prize"></i>
         <div class="wui-i-prize">
-            每次抽奖：送<b class="xa-delivery">{{component.model.delivery}}</b>积分，消耗<b class="xa-expand">{{ component.model.expend }}</b>积分
+            参与送<b class="xa-delivery">{{component.model.delivery}}</b>积分
         </div>
 	</div>
     <div class="wui-i-record">
